Added exported cmake target: Uri::network-uri.
Export a cmake target for convenience when building from other cmake projects.

A dependent project may build against the exported target by using the
cmake-generated UriConfig.cmake file with something like the following:
    find_package(Uri)
    target_link_libraries(<target> PUBLIC Uri::network-uri)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,3 +101,8 @@ if (Uri_BUILD_DOCS)
 endif()
 
 install(DIRECTORY include DESTINATION ".")
+
+install(EXPORT UriConfig
+  DESTINATION lib/cmake/Uri
+  NAMESPACE Uri::
+)
