--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,3 +100,8 @@ if (Uri_BUILD_DOCS)
 endif()
 
 install(DIRECTORY include DESTINATION ".")
+
+install(EXPORT UriConfig
+  DESTINATION lib/cmake/Uri
+  NAMESPACE Uri::
+)
